--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         href="https://www.linkedin.com/in/shantanu-jalkote/"
         >LinkedIn</a
       >
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://shanatanu-j.github.io/Portfolio-Website/">Website</a>
       <p class="copyright">© Shantanu Jalkote</p>
     </div>
   </body>
