--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="profile">
         <img
           class="profile-pic"
-          src="images/art-modified.png"
+          src="images/profile.png"
           alt="profile-pic"
         />
         <h2>Hello.</h2>
