--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <h3>Web Developement</h3>
           <p>
             I have a thorough grasp of Web Developing Using Html5 and Css.I am
-            also familiar with the concepst of back-end developement such as
+            also familiar with the concepts of back-end developement such as
             nodejs, React and Restful Api.
           </p>
         </div>
@@ -59,7 +59,7 @@
           <h3>Python</h3>
           <p>
             I have a thorough grasp of Python Language and I have created many
-            projects usin Python and it's various libraries such as the turtle
+            projects using Python and it's various libraries such as the turtle
             library as well as the numpy library.
           </p>
         </div>
